--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,64 @@
   }
 }
 
+li {
+  list-style-type: none;
+}
+
+.listTag {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: antiquewhite;
+  color: #282c34;
+  border: 1px solid saddlebrown;
+  align-items: center;
+}
+
+.listTagForBilling {
+  margin-top: 2em;
+}
+
+.listTagForBillingContent {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  color: #282c34;
+  align-items: center;
+}
+
+
+.mainTag {
+  display: flex;
+  flex-direction: row;
+  /* background-color: antiquewhite; */
+  /* border: 1px solid #282c34; */
+}
+
+.subTag1 {
+  width: 75%;
+  border-left: 1px solid black;
+   border: 1px double black;
+   height: 45em;
+}
+.contentCenter {
+  text-align: center;
+}
+
+button{
+  background-color: red;
+  color: white;
+}
+
+input {
+  border: 2px double #282c34 ;
+  width: 99.7% ;
+}
+
+.subTag2 {
+  width: 25%;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
